Named & Anonymous Volumes + Commands Examples

--- a/docker-syntax-volumes/Dockerfile
+++ b/docker-syntax-volumes/Dockerfile
@@ -12,6 +12,7 @@ EXPOSE 80
 
 # specify path to folders (inside container) that should be mapped to some folder outside of container.
 # you can add multiple paths.
+# that syntax is for Anonymous Volumes.
 VOLUME [ "/app/folder-name" ]
 
 CMD ["node", "server.js"]
