--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -1,8 +1,25 @@
 version: "3.8" # describe available feature for this version
 services: # list of containers, names it's up to you
   mongodb:
+    image: 'mongo'
+    volumes:
+      - data:data/db
+#    environment: | without env files
+#      - MONGO_INITDB_ROOT_USERNAME=max
+#      - MONGO_INITDB_ROOT_PASSWORD=secret
     
-  backend:
-    
-  frontend:
-    
+#     MONGO_INITDB_ROOT_USERNAME:max | another option to specify env, 
+#         you don't need dashes in front of the line if you have key:value pairs
+    env_file: # with env files
+      - ./env/mongo.env
+#     if you would like to have a specifically named network
+#     otherwise docker will create it for you 
+#    networks:
+#      - goals-net 
+#  backend:
+#    
+#  frontend:
+
+# docker should be aware of what volumes it should create for your services 
+volumes: 
+  data:
